--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ build*
 dist*
 snapshot*
 AIRi.py
-python/airi/media/css/jquery.mobile-1.0a4.css
+python/airi/media/css/jquery.mobile*.css
 python/airi/media/css/images/*
 *.tar.gz
 *~
