--- a/AIRi-droid/AndroidManifest.xml
+++ b/AIRi-droid/AndroidManifest.xml
@@ -6,7 +6,7 @@
   xmlns:android="http://schemas.android.com/apk/res/android">
   <application
     android:debuggable="true"
-    android:icon="@drawable/script_logo_48"
+    android:icon="@drawable/ic_launcher_airi_72"
     android:label="@string/app_name"
     android:name=".ScriptApplication"
     android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
