Start using release key

--- a/AIRi-droid/build.properties
+++ b/AIRi-droid/build.properties
@@ -9,12 +9,6 @@
 #  'source.dir' for the location of your java source folder and
 #  'out.dir' for the location of your output folder.
 
-# You can also use it define how the release builds are signed by declaring
-# the following properties:
-#  'key.store' for the location of your keystore and
-#  'key.alias' for the name of the key to use.
-# The password will be asked during the build when you use the 'release' target.
-
-# The name of your application package as defined in the manifest.
-# Used by the 'uninstall' rule.
+key.store=airi-key.keystore
+key.alias=airi
 application.package=net.aircable.airi
