--- a/AIRi-droid/AndroidManifest.xml
+++ b/AIRi-droid/AndroidManifest.xml
@@ -20,6 +20,7 @@
     <activity
       android:name=".ScriptActivity"
       android:configChanges="keyboardHidden|orientation"
+      android:noHistory="true"
 	>
       <intent-filter>
         <action
