--- a/AIRi-droid/AndroidManifest.xml
+++ b/AIRi-droid/AndroidManifest.xml
@@ -6,22 +6,24 @@
   android:versionName="1.0.c9"
   android:installLocation="preferExternal">
   <uses-sdk 
-  	android:minSdkVersion="5"
-  	android:targetSdkVersion="8"
+    android:minSdkVersion="5"
+    android:targetSdkVersion="8"
   />
+  <!-- android:theme="@style/Theme.NoBackground" -->
   <application
     android:debuggable="true"
     android:icon="@drawable/ic_launcher_airi_72"
     android:label="@string/app_name"
     android:name=".ScriptApplication"
-    android:theme="@style/Theme.NoBackground"
     android:configChanges="keyboardHidden|orientation"
+    android:theme="@android:style/Theme.NoTitleBar" 
     >
     <activity
       android:name=".ScriptActivity"
       android:configChanges="keyboardHidden|orientation"
       android:noHistory="true"
-	>
+      android:windowSoftInputMode="adjustResize|stateAlwaysHidden"
+    >
       <intent-filter>
         <action
           android:name="android.intent.action.MAIN" />
@@ -40,10 +42,15 @@
       android:name="com.googlecode.android_scripting.activity.FutureActivity" 
       android:configChanges="keyboardHidden|orientation"
       android:clearTaskOnLaunch="true"
-      android:excludeFromRecents="true"/>
+      android:excludeFromRecents="true"
+      android:windowSoftInputMode="adjustResize|stateAlwaysHidden"
+      android:theme="@android:style/Theme.NoTitleBar.Fullscreen" 
+    />
     <activity android:theme="@android:style/Theme.Translucent.NoTitleBar" 
       android:name=".DialogActivity"
-      android:configChanges="keyboardHidden|orientation"/>
+      android:configChanges="keyboardHidden|orientation"
+      android:windowSoftInputMode="adjustResize|stateAlwaysHidden"
+    />
   </application>
   <uses-permission
    android:name="android.permission.BLUETOOTH"/>
